--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,8 +10,8 @@
       <li><a href="#" (click)="setActive('Home')" [class.active]="activeLink==='Home'">Home</a></li>
       <li><a href="about" (click)="setActive('About Us')" [class.active]="activeLink==='About Us'">About Us</a></li>
       <li><a href="our-products" (click)="setActive('Our Products')" [class.active]="activeLink==='Our Products'">Our Products</a></li>
-      <li><a href="#" (click)="setActive('Privacy Policy')" [class.active]="activeLink==='Privacy Policy'">Privacy Policy</a></li>
-      <li><a href="#" (click)="setActive('Cancellation & Refund')" [class.active]="activeLink==='Cancellation & Refund'">Cancellation & Refund</a></li>
+      <li><a href="privacy-policy" (click)="setActive('Privacy Policy')" [class.active]="activeLink==='Privacy Policy'">Privacy Policy</a></li>
+      <li><a href="cancellation-refund" (click)="setActive('Cancellation & Refund')" [class.active]="activeLink==='Cancellation & Refund'">Cancellation & Refund</a></li>
       <li><a href="#" (click)="setActive('Terms Of Use')" [class.active]="activeLink==='Terms Of Use'">Terms Of Use</a></li>
       <li><a href="#" (click)="setActive('Contact Us')" [class.active]="activeLink==='Contact Us'">Contact Us</a></li>
       <li><a href="#" (click)="setActive('Contact Us')" [class.active]="activeLink==='Contact Us'"></a></li>
